CHANGELOG
=========
+-----------------------+
| VERSION: 0.5.0        |
+-----------------------+
BUGFIXES

IMPROVEMENTS
10-07-05    Implemented accessibility enhancements for navigation (Michael Heuberger)
10-07-05    Big naming cleanup in CSS as per RFC (Riccardo Magliocchetti)

+-----------------------+
| VERSION: 0.4.7        |
+-----------------------+
BUGFIXES

IMPROVEMENTS
14-09-05    Unit test runner added, currently works with pear-installable version of
            SimpleTest, many thanks to m3 Media Services Limited for granting us the
            right to distribute this under BSD (http://www.m3.net/)

+-----------------------+
| VERSION: 0.4.6        |
+-----------------------+
BUGFIXES
14-09-05    Fixed missing bug icon in msie
14-09-05    Fixed bug where new sequences for pgsql were correctly created but existing 
            ones weren't updated when triggering the "Rebuild Sequences Now"
            action in the Maintenance Mgr (Lorenzo Alberton)
13-09-05    Disabled FK constraints from MySQL as there appears to be a bug
            in the implementation.  Same SQL works fine in PgSQL ;-)
13-09-05    Fixed bug where prefs where not being correctly added for new
            registrants
09-09-05    Fixed a bug where non-indexed arrays could be overwritten
            (Lorenzo Alberton)
08-09-05    Some SMTP servers had problems with Mail_smtp's localhost default
            value, this is now catered for (Chris McKay)
08-09-05    Server vars now interpreted correctly on IIS 6.0, note:
            frontScriptName in config file MUST end with "?" (Miha Vrhovnik)
08-09-05    The 'passwordmgr_redirectToEdit' failed because of case-sensitivity,
            now fixed
02-09-05    Fixed bug where FCK editor would not display correctly
02-09-05    Fallback to auto-detected language causing js errors in 
            FCK, fixed again
31-08-05    Some magic_quotes_gpc scenarios weren't dealt with correctly, now
            fixed (Eric Persson)