@@ -117,8 +117,6 @@ class ArticleViewMgr extends SGL_Manager
         $output->template = 'articleView.html';
         $output->leadArticle = SGL_Item::getItemDetail($input->articleID);
         
-        //  make article title available for <title> tag
-        $GLOBALS['_SGL']['REQUEST']['articleTitle'] = $output->leadArticle['title'];
         if ($output->leadArticle['type'] != 'Static Html Article') {
             $output->articleList = SGL_Item::getItemListByCatID(
                 $input->catID, $input->dataTypeID, $this->mostRecentArticleID);
