@@ -1,6 +1,5 @@
 <h1 class="pageTitle">{leadArticle[title]}</h1>
 <p>{leadArticle[bodyHtml]:h}</p>
-
 <p>
 {if:isAdmin}
     <a href="{makeUrl(#edit#,#article#,#publisher#,##,#frmArticleID|articleID#)}" />
